--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
 body {
     margin: 20px;
 }
+
+.main-img{
+    width: 150px
+}
+
+.card{
+    padding: 20px;
+    border: dotted blue;
+    display: flex;
+    justify-content: space-around;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
