--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,23 @@
 body {
     margin: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .main-img{
-    width: 150px
+    width: 150px;
+    border-radius: 5px;
+    border: 1px solid #FA244E;
 }
 
 .card{
     padding: 20px;
-    border: dotted blue;
     display: flex;
     justify-content: space-around;
     width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0px auto;
     text-align: center;
+    border: 3px solid #FA244E;
+    background-color: #BAACFD;
+    color: #141121;
+    border-radius: 5px;
 }
